--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-jieba==0.42.1
-pandas==2.0.3
-torch==2.2.0
-simpletransformers==0.70.0
-scikit-learn==1.3.2
-thulac==0.2.2
-stanfordnlp==0.2.0
-PyNLPIR==0.6.0
-pyltp==0.4.0
+jieba
+pandas
+torch
+simpletransformers
+scikit-learn
+thulac
+stanfordnlp
+PyNLPIR
+pyltp
+openai
